<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.error.ErrorFragment">

    <ImageView
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:contentDescription="@string/no_wifi"
        android:src="@drawable/ic_no_wifi" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/no_wifi_header"
        android:textAlignment="center"
        android:textColor="@color/grey" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/no_wifi_message"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="11sp"/>


</LinearLayout>