<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/strDirectory"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".ui.directory.DirectoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_marginStart="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:src="@drawable/ic_arrow_back" />

            <TextView
                android:id="@+id/lblTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:fontFamily="@font/inter_semibold"
                android:text=""
                android:textColor="@color/grey"
                android:textSize="20sp" />
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lblDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="18dp"
                    android:fontFamily="@font/inter_regular"
                    android:text=""
                    android:textColor="@color/grey" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="24dp"
                    android:gravity="end|center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/lblCreated"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="12dp"
                        android:fontFamily="@font/inter_regular"
                        android:text=""
                        android:textColor="@color/grey"
                        android:textSize="12sp" />


                    <TextView
                        android:id="@+id/lblViewsCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_regular"
                        android:text=""
                        android:textColor="@color/grey"
                        android:textSize="13sp" />

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="8dp"
                        android:contentDescription="@string/views_count"
                        android:src="@drawable/ic_eye" />

                    <TextView
                        android:id="@+id/lblCommentsCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:fontFamily="@font/inter_regular"
                        android:text=""
                        android:textColor="@color/grey"
                        android:textSize="12sp" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="8dp"
                        android:contentDescription="@string/comments_count"
                        android:src="@drawable/ic_comment" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="14dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipOrderBy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:checked="false"
                            android:fontFamily="@font/inter_semibold"
                            android:text="Fecha"
                            android:textColor="@color/grey"
                            app:checkedIconEnabled="false"
                            app:chipBackgroundColor="@color/mid_blue"
                            app:chipIcon="@drawable/ic_calendar"
                            app:chipIconSize="18dp"
                            app:chipStartPadding="10dp" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipOrderType"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:checkable="true"
                            android:checked="true"
                            android:fontFamily="@font/inter_semibold"
                            android:text="Ascendente"
                            android:textColor="@color/grey"
                            app:checkedIconEnabled="false"
                            app:checkedIconVisible="false"
                            app:chipBackgroundColor="@color/mid_blue"
                            app:chipStartPadding="10dp"
                            app:chipStrokeColor="@color/grey" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/lblPhotosCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="18dp"
                    android:background="#6F000000" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/listPhotos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/imgNoWifi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:visibility="gone">


                    <ImageView
                        android:layout_width="220dp"
                        android:layout_height="220dp"
                        android:contentDescription="@string/no_wifi"
                        android:src="@drawable/ic_no_wifi" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="48dp"
                        android:layout_marginTop="32dp"
                        android:fontFamily="@font/inter_semibold"
                        android:text="@string/no_wifi_header"
                        android:textAlignment="center"
                        android:textColor="@color/grey" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="40dp"
                        android:layout_marginTop="32dp"
                        android:text="@string/no_wifi_message"
                        android:textAlignment="center"
                        android:textColor="@color/grey"
                        android:textSize="11sp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
